cmake_minimum_required(VERSION 3.5.1)

option(FL_BUILD_APP_ASR "Build asr task for flashlight" ON)
option(FL_BUILD_APP_IMG_CLASS "Build image classification app" ON)

if (FL_BUILD_APP_ASR)
  if (NOT FL_BUILD_DISTRIBUTED)
    message(FATAL_ERROR "FL_BUILD_DISTRIBUTED must be enabled to build speech recognition")
  endif()
  set(FL_APP_ASR_ROOT_DIR ${FLASHLIGHT_APPS_DIR}/asr)
  include(${FL_APP_ASR_ROOT_DIR}/CMakeLists.txt)
  set(INSTALLABLE_TARGETS ${INSTALLABLE_TARGETS} flashlight-app-asr)
  if (FLASHLIGHT_USE_CUDA)
    set(INSTALLABLE_TARGETS ${INSTALLABLE_TARGETS} warpctc)
  endif()
  setup_install_headers(${FLASHLIGHT_APPS_DIR} ${FL_INSTALL_INC_DIR_HEADER_LOC})
endif ()

if (FL_BUILD_APP_IMG_CLASS)
  if (NOT FL_BUILD_DISTRIBUTED)
    message(FATAL_ERROR
    "FL_BUILD_DISTRIBUTED must be enabled for image classification")
  endif()
  set(FL_APP_IMG_CLASS_ROOT_DIR ${FLASHLIGHT_APPS_DIR}/imclass)
  include(${FL_APP_IMG_CLASS_ROOT_DIR}/CMakeLists.txt)
  set(INSTALLABLE_TARGETS ${INSTALLABLE_TARGETS} flashlight-app-imclass)
  setup_install_headers(${FLASHLIGHT_APPS_DIR} ${FL_INSTALL_INC_DIR_HEADER_LOC})
endif ()
